# xilem_web_tailwindcss

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md
.github/workflows/: ci.yml  release.yml
crates/xilem_web_tailwindcss/: Cargo.toml  README.md
crates/xilem_web_tailwindcss/examples/: tw_macro.rs
crates/xilem_web_tailwindcss/src/: lib.rs
crates/xilem_web_tailwindcss_cli/: Cargo.toml  README.md
crates/xilem_web_tailwindcss_cli/src/: main.rs  tailwind.rs
examples/tailwind_basic/: Cargo.toml  README.md  index.html  tailwind.config.js
examples/tailwind_basic/src/: main.rs
