[workspace]
resolver = "3"
members = [
    "crates/xilem_web_tailwindcss",
    "crates/xilem_web_tailwindcss_cli",
]
exclude = [
    "examples/tailwind_basic",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
authors = ["cupnfish@icloud.com"]
repository = "https://github.com/Cupnfish/xilem_web_tailwindcss"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
