[package]
name = "xilem_web_tailwindcss_cli"
version.workspace = true
description = "TailwindCSS CLI helper for xilem_web projects."
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["xilem", "web", "tailwind", "css"]
categories = ["web-programming", "gui"]

[[bin]]
name = "xilem-web-tailwindcss"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"] }
directories = "5.0.1"
reqwest = { version = "0.12.26", default-features = false, features = ["rustls-tls", "blocking"] }
target-lexicon = "0.12.16"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
which = "7.0.2"

[lints]
workspace = true
