[package]
name = "xilem_web_tailwindcss_cli"
version.workspace = true
description = "TailwindCSS CLI helper for xilem_web projects."
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["xilem", "web", "tailwind", "css"]
categories = ["web-programming", "gui"]

[[bin]]
name = "xilem-web-tailwindcss"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
directories = "6.0"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "blocking"] }
target-lexicon = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
which = "8.0"

[lints]
workspace = true
