[package]
name = "tailwind_basic"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
publish = false

[dependencies]
xilem_web = { git = "https://github.com/linebender/xilem", branch = "main" }
xilem_web_tailwindcss = { path = "../../crates/xilem_web_tailwindcss" }
console_error_panic_hook = "0.1.7"
web-sys = "0.3"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
